# Maze

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CORRECTION_SUMMARY.md  FILES_CREATED.txt  FULL_SYSTEM_VERIFICATION.md  GAZEBO_HARMONIC_SETUP.md  GETTING_STARTED.txt  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION_GUIDE.md  LAUNCH_TROUBLESHOOTING.md  LICENSE  PROJECT_CHECKLIST.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  REPORT_TEMPLATE.md  ROBOT_ADDED_TEST.md  TEST_NOW.md  VERIFICATION.md  build_and_test.sh  package.xml  requirements.txt  setup.py
config/: cartographer.lua  dqn_params.yaml  mapping.rviz  nav2_params.yaml  navigation.rviz  slam_params.yaml
launch/: cartographer.launch.py  full_sim_launch.py  gazebo_maze.launch.py  gazebo_maze_simple.launch.py  gazebo_maze_v2.launch.py  gazebo_only.launch.py  nav2_bringup.launch.py  navigation.launch.py  online_slam.launch.py  teleop.launch.py
maps/: .gitkeep
rviz/: navigation.rviz
scripts/: compare_performance.py  dql_navigator.py  performance_tracker.py  setup.bash  test_setup.py
scripts/dqn_agent/: dqn_node.py  train.py
scripts/tools/: recorder_node.py
scripts/ui/: goal_clicker_node.py
src/safety/: obstacle_monitor.cpp
turtlebot3_autonav/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  FILES_CREATED.txt  INSTALL.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERIFICATION.md  __init__.py  package.xml  requirements.txt  setup.py
turtlebot3_autonav/config/: dqn_params.yaml  nav2_params.yaml  slam_params.yaml
turtlebot3_autonav/launch/: full_sim_launch.py  gazebo_only.launch.py  nav2_bringup.launch.py  online_slam.launch.py
turtlebot3_autonav/rviz/: navigation.rviz
turtlebot3_autonav/scripts/: compare_performance.py  test_navigation.sh
turtlebot3_autonav/scripts/dqn_agent/: dqn_node.py  train.py
turtlebot3_autonav/scripts/tools/: recorder_node.py
turtlebot3_autonav/scripts/ui/: goal_clicker_node.py
turtlebot3_autonav/src/safety/: obstacle_monitor.cpp
turtlebot3_autonav/turtlebot3_autonav/: __init__.py
turtlebot3_autonav/urdf/: turtlebot3_burger.urdf.xacro
turtlebot3_autonav/world/: maze.world
urdf/: turtlebot3_burger.urdf.xacro
world/: maze.world
worlds/: maze_world.sdf
